<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string name="app_name">Wifi Profile Switcher</string>
        <string name="strwhite">Whitelisted</string>
        <string name="strblack">Blacklisted</string>
        <string name="wiTitle">Wifi Networks</string>
        <string name="btnDon">Done Changes</string>
        <string name="strSettTtile">::Preferences</string>
        <string name="strSettAud">Audio Profiles</string>
        <string name="strSettAudMod">Blacklisted Mode</string>
        <string name="btnCnc">Cancel</string>
        <string name="btnClr">Clear All</string>
        <string name="btnPrefs">Preferences</string>
        <string name="maxVol">Max volume at normal mode</string>
        <string name="btnDonePref">Done Changes</string>
        <string name="settWlanM">Wireless Settings</string>
        <string name="scanIntervText">Scan for Wifi networks every</string>
        <string-array name="arrSpn">
                <item>Vibrate</item>
                <item>Silent</item>
        </string-array>
</resources>
