<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/strSettTtile"
                android:layout_marginLeft="10dp"
                android:textSize="30sp"
                android:id="@+id/textView" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/strSettAud"
                android:textSize="25sp"
                android:layout_marginLeft="20dp"

                android:id="@+id/textView2" android:layout_below="@+id/textView" android:layout_alignParentLeft="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/strSettAudMod"
                android:textSize="20sp"
                android:paddingTop="8dp"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView2" android:layout_alignRight="@+id/textView"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"

                android:layout_alignTop="@+id/textView3" android:layout_toRightOf="@+id/textView3"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/maxVol"
                android:textSize="20sp"
                android:id="@+id/textView4" android:layout_below="@+id/spinner"
                android:layout_alignLeft="@+id/textView3"/>
        <SeekBar
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="7"

                android:id="@+id/seekBarVol" android:layout_below="@+id/textView4" android:layout_centerHorizontal="true"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDonePref"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/buttonDnPref" android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCnc"
                android:id="@+id/buttonCncPref"
                android:layout_marginLeft="10dp"
                android:layout_alignTop="@+id/buttonDnPref" android:layout_alignParentLeft="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textViewSeekb" android:layout_below="@+id/seekBarVol"
                android:layout_centerHorizontal="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/settWlanM"
                android:textSize="25sp"
                android:id="@+id/textView5"
                android:layout_below="@+id/textViewSeekb" android:layout_alignLeft="@+id/textView2"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/scanIntervText"
                android:textSize="20sp"
                android:id="@+id/textView6"
                android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>

</RelativeLayout>